# VidLocker

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose-example.yaml  nginx.conf  package-lock.json
.github/: dependabot.yml
.github/workflows/: rust.yml
.sqlx/: query-49f888eb6ec1eefeaa90d02b9889c5da6e04a534d41153dd5318ee00c5870a5d.json  query-7c72589288fcd0995dc221d08b3e64122489d0a344ef8a39c073f58987acb94c.json  query-8f006ea77ca0149ad8a1022b05fbcd189e97207c1e8602f4a3b70e468c13ad16.json
backend/: Cargo.toml  Dockerfile  rustypipe_cache.json
backend/.sqlx/: query-2c58e38d329a96761bc2ca464ced9b979e7df22c329947d24cc92d80b351bcd0.json  query-473d2ddf7330446db47323063f94f888ca3a9f1a3d768c39836747ca3ea950ca.json  query-50b3c94817375359555eabcb43738b96285e8137519f8ee3b199a18895fa3ffa.json  query-5759e15836278c7dc6bd071249b38f5f9120a8c7b90a3c1c12b2b61a05f81d8c.json  query-686bc45442c9fbf102792c948624333843434f9150be9c138a56418f5c4aa2a6.json  query-6ef295a027710010c562a9a62fc96bf6e91245332cbeb7f12f62a21b218576ab.json  query-787c8e4ee663ee2f4e166a06cd83fcfc3f1aa28a6b61f8af7941c27bb46b9a7e.json  query-9063ebe50566210823a52defff8f7b0ca5f7bdb4a373c67c22507d2bb5a6e5c9.json  query-a592b96b54b05518255e4ae968e634a4e579a1390a865630dc5574deff195a8e.json  query-deab8c0396e0f7108aa84e095dd640a26de81c58b2b4c5782e1f750944bcbc91.json
backend/migrations/: 20250102211058_init.down.sql  20250102211058_init.up.sql
backend/src/: main.rs
backend/src/func/: database.rs  files.rs  mod.rs  preperations.rs  video.rs  yt.rs
backend/src/queue/: queue_worker.rs
backend/src/routes/: files.rs  mod.rs  responses.rs  video.rs  yt.rs
backend/src/structs/: file.rs  video.rs
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/: FileExplorer.svelte  Linkcard.svelte  Notification.svelte  Thumbnailpreview.svelte  VideoDetails.svelte  mainmenucard.svelte  modal.svelte  navbar.svelte
frontend/src/lib/stores/: notification.ts  theme.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/Download/: +page.svelte
frontend/src/routes/Shelf/: +page.svelte
migrations/: 20250102211058_init.up.sql
src/: main.rs
src/func/: files.rs  mod.rs  preperations.rs  video.rs  yt.rs
src/queue/: queue_worker.rs
src/routes/: files.rs  misc.rs  mod.rs  responses.rs  video.rs  yt.rs
