[package]
name = "VidLocker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.39.2", features = ["full"]}
serde = "1.0.204"
axum-macros = "0.4.1"
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "sqlite"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-sessions = "0.13.0"
time = "0.3.34"
rand = "0.8.5"
argon2 = "0.5.3"
fs_extra = "1.3.0"
async-trait = "0.1.81"
tower-http = { version = "0.6.0", features = ["full"] }
youtube_dl = "0.10.0"
toml = "0.8.19"
humansize = "2.1.3"
bytesize = { version = "1.3.0", features = ["default", "serde"] }
serde_json = "1.0.122"
url = "2.5.2"
