[package]
name = "VidLocker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = "1.0.204"
axum-macros = "0.5.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "time",
    "chrono",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-sessions = "0.14.0"
time = "0.3.34"
rand = "0.8.5"
argon2 = "0.5.3"
fs_extra = "1.3.0"
async-trait = "0.1.86"
tower-http = { version = "0.6.0", features = ["full"] }
youtube_dl = "0.10.0"
toml = "0.8.19"
humansize = "2.1.3"
bytesize = { version = "1.3.0", features = ["default", "serde"] }
serde_json = "1.0.137"
url = "2.5.2"
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["json"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde_with = "3.12.0"
