[profile.dev]
incremental = true

[profile.release]
incremental = true

[package]
name = "VidLocker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.43.0", features = ["full"] }
serde = "1.0.204"
axum-macros = "0.5.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "time",
    "chrono",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
fs_extra = "1.3.0"
tower-http = { version = "0.6.0", features = ["full"] }
youtube_dl = "0.10.0"
serde_json = "1.0.138"
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["json"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde_with = "3.12.0"
tower = "0.5.2"
axum-server = {version = "0.7.2", features=["tls-rustls"]}
urlencoding = "2.1.3"
url = "2.5.4"


[dev-dependencies]
serial_test = "3.2"
