[profile.dev]
incremental = true

[profile.release]
incremental = true

[package]
name = "VidLocker"
version = "0.1.0"
edition = "2024"

license = "AGPL-3.0-or-later" #
authors = ["Attackly@outlook.de"]
description = "YT Video and Livestream archiver"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.0", features = ["full"] }
serde = "1.0.219"
axum-macros = "0.5.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "time",
    "chrono",
    "macros"
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
fs_extra = "1.3.0"
tower-http = { version = "0.6.6", features = ["full"] }
youtube_dl = "0.10.0"
serde_json = "1.0.140"
dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_with = "3.14.0"
tower = "0.5.2"
axum-server = {version = "0.7.2", features=["tls-rustls"]}
urlencoding = "2.1.3"
url = "2.5.4"
scraper = "0.23.1"
[dev-dependencies]
serial_test = "3.2"
